--- a/.gitignore
+++ b/.gitignore
@@ -23,4 +23,12 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-.env*
+
+# Wrangler
+.wrangler/
+.dev.vars
+
+# Environment variables
+.env
+.env.*
+!.env.example
