--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "preview:wrangler": "npm run build && wrangler pages dev dist --compatibility-date=2024-10-30",
+    "deploy": "npm run build && wrangler pages deploy dist --project-name newsletter-digest-web"
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
@@ -16,6 +18,7 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "wrangler": "^3.0.0",
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
