--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "deploy": "npm run build && wrangler pages deploy dist --project-name newsletter-digest-web"
   },
   "dependencies": {
-    "lucide-react": "^0.344.0",
     "@supabase/supabase-js": "^2.x.x",
+    "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
-    "wrangler": "^3.0.0",
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
@@ -32,6 +32,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "wrangler": "^3.0.0"
   }
 }
