--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "preview:wrangler": "wrangler pages dev ./ --compatibility-date=2024-10-28",
+    "preview:wrangler": "wrangler pages dev ./ --compatibility-date=2024-10-28 --ip \"0.0.0.0\"",
     "deploy": "npm run build && wrangler pages deploy dist --project-name newsletter-digest-web"
   },
   "dependencies": {
